Add advance html servicios

--- a/public_html/ccs/estilos.css
+++ b/public_html/ccs/estilos.css
@@ -17,7 +17,8 @@
         "texto texto texto texto  texto"
         "texto texto texto texto texto"
         "pie pie pie pie pie";
-    position: relative;}
+    position: relative;
+  }
 
 
 
