--- a/public_html/ccs/estilos.css
+++ b/public_html/ccs/estilos.css
@@ -35,7 +35,7 @@
 
 .texto {
 grid-area: texto;
-background-color: #f48fb1;
+background-color: #a1e0e7;
 border: 0px;
 }
 
@@ -43,7 +43,7 @@ border: 0px;
   grid-area: pie;
   text-align: center;
   font-size: 12px;
-  background:#ce93d8;
+  background:#a1e0e7;
 }
 
 
@@ -96,6 +96,43 @@ border: 0px;
     left: -10px;
     top: 5px;
     right: 10px;
+}
+
+
+.btn-registro {
+  text-decoration: none;
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 2.5;
+  margin-top: 2rem;
+  margin-right: 1rem;
+}
+
+/*-- button style  slogan 2--*/
+.button-style-registro {
+  padding: 12px 36px;
+  font-size: 16px;
+  color: #212121;
+  border-radius: 30px;
+  font-weight: 600;
+  text-transform: uppercase;
+  box-shadow: 0 0.5rem 1rem rgb(16 16 16 / 14%);
+  outline: none;
+  border: none;
+  background-size: 200% auto;
+  background-image: linear-gradient(90deg, #56c8d8 0%, #e3f2fd 51%, #0097a7 100%);
 }
 
 #btn_Registro:hover {
