Adiccion menú contactos
Se añade el menu principal a la página de contactanos

--- a/public_html/contacto/css/main.css
+++ b/public_html/contacto/css/main.css
@@ -410,3 +410,13 @@ footer{
   background-color: #f2f2f2;
   text-align: center;
 }
+
+.menu{
+  list-style-type: none;
+  text-align: center;
+}
+
+li{
+  display: inline;
+  margin-left: 4%; 
+}
