--- a/public_html/productos/css/mediumish.css
+++ b/public_html/productos/css/mediumish.css
@@ -340,3 +340,22 @@ ul.tags li a:hover {
 	border-radius:50%;
 	font-size:12px;
 }
+
+.mainMenu{
+	margin-top: -4%;
+	margin-bottom: 4%;
+	list-style-type: none;
+	text-align: center;
+  }
+  
+li{
+	display: inline;
+	margin-left: 4%;
+  }
+
+.mainMenu a{
+	font-size: 1.4em;
+	font-family: Righteous;
+	font-weight: 80;
+	color: inherit;
+}
